# dm_client

./: CMakeLists.txt
files/: dm_board.txt  dm_ifconfig.txt  dm_uptime.txt  dmhash  handout-12926-95e18f.md
files openWRT/: dm_feeds.sh
files openWRT/files/etc/config/: tf_device_monitor
files/etc/tf_device_monitor_scripts/: getNetData.lua  getNetDeviceInfo.lua  getSystemInfo.lua
src/: dm_mainHeader.h  main.c  net_utils.c  run_CLIcmd.c  run_CLIcmd.h  state_handler.c
